First test at getting position mode limits in through MAVLink

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -145,6 +145,7 @@ set(msg_files
 	Ping.msg
 	PositionControllerLandingStatus.msg
 	PositionControllerStatus.msg
+	PositionModeLimits.msg
 	PositionSetpoint.msg
 	PositionSetpointTriplet.msg
 	PowerButtonState.msg
